--- a/wp-content/themes/syntax-child/style.css
+++ b/wp-content/themes/syntax-child/style.css
@@ -518,6 +518,19 @@ a:hover, a:focus, a:active {
   animation: opacity 0.5s linear;
 }
 
+img.alignleft,
+.wp-caption.alignleft {
+    margin-left: 0px;
+
+}
+
+@media screen and (max-width: 1020px) {
+    img.alignleft,
+    .wp-caption.alignleft {
+        margin-left: 0px;
+    }
+}
+
 
 
 
